// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChaosExperimentExecView Test action buttons 1`] = `
<div>
  <div
    class=""
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target bp3-popover-open"
      >
        <div
          class="bp3-active"
        >
          <button
            aria-label="common.performAction"
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.performAction
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`ChaosExperimentExecView Test action buttons 2`] = `
<div>
  <div
    class=""
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <div
          class=""
        >
          <button
            aria-label="common.performAction"
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.performAction
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`ChaosExperimentExecView Test error in step evaluation 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
  >
    <div
      data-testid="error-tracking-child-mounter"
    >
      mounted
    </div>
  </div>
</div>
`;

exports[`ChaosExperimentExecView Test failure responses 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
  >
    <div
      data-testid="error-tracking-child-mounter"
    >
      mounted
    </div>
  </div>
</div>
`;

exports[`ChaosExperimentExecView Test renders snapshot 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
  >
    <div
      data-testid="error-tracking-child-mounter"
    >
      mounted
    </div>
  </div>
</div>
`;
